apps/todo-app-go/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: todo-app-go
  name: todo-app-go
  namespace: todo-app-go
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-go
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: todo-app-go
    spec:
      containers:
      - image: ghcr.io/kkato/todo-app-go:latest
        name: todo-app-go
      imagePullSecrets:
      - name: ghcr
