apps/todo-app-go/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-go
  namespace: todo-app-go
spec:
  selector:
    app: todo-app-go
  ports:
    - port: 80
      targetPort: 8080
